--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                         <p class="personal-age-name" >Combat 15 anos ,é o ceo da <b>DevHelp</b></p>
 
-                        <a href="">Descubra mais</a>
+                        <a href="https://github.com/CombatLucas/">Descubra mais</a>
                     </div>
                 </div>
 
@@ -83,7 +83,7 @@
 
                         <p class="personal-age-name" >Combat 15 anos ,é o dev da <b>DevHelp</b></p>
 
-                        <a href="">Descubra mais</a>
+                        <a href="https://github.com/CombatLucas/">Descubra mais</a>
                     </div>
                 </div>
 
@@ -97,7 +97,7 @@
 
                         <p class="personal-age-name" >Combat 15 anos ,é o dev da <b>DevHelp</b></p>
 
-                        <a href="">Descubra mais</a>
+                        <a href="https://github.com/CombatLucas/">Descubra mais</a>
                     </div>
                 </div>
 
@@ -111,7 +111,7 @@
 
                         <p class="personal-age-name" >Combat 15 anos ,é o Designer da <b>DevHelp</b></p>
 
-                        <a href="">Descubra mais</a>
+                        <a href="https://github.com/CombatLucas/">Descubra mais</a>
                     </div>
                 </div>
             </div>
